# JuliARN

./: .gitignore  CMakeLists.txt
sandbox/: sandbox.cpp  sandbox.py  sandbox2.py  sandbox3.py  simplex_test.py  stats.py
sandbox/PolytopeAlgebra/: PolytopeAlgebra.py  PolytopeAlgebra_3.cpp
src/: PolytopeAlgebra.py  Simplex.py  __init__.py
test/test_PolytopeAlgebra/: nussinov.py
test/test_Simplex/: simple_test.py
